--- a/Loan_Predictor_1.ipynb
+++ b/Loan_Predictor_1.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "4             1.0         Urban           Y  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
        "4             1.0         Urban  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,6 +340,180 @@
    "source": [
     "test_data.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 614 entries, 0 to 613\n",
+      "Data columns (total 13 columns):\n",
+      "Loan_ID              614 non-null object\n",
+      "Gender               601 non-null object\n",
+      "Married              611 non-null object\n",
+      "Dependents           599 non-null object\n",
+      "Education            614 non-null object\n",
+      "Self_Employed        582 non-null object\n",
+      "ApplicantIncome      614 non-null int64\n",
+      "CoapplicantIncome    614 non-null float64\n",
+      "LoanAmount           592 non-null float64\n",
+      "Loan_Amount_Term     600 non-null float64\n",
+      "Credit_History       564 non-null float64\n",
+      "Property_Area        614 non-null object\n",
+      "Loan_Status          614 non-null object\n",
+      "dtypes: float64(4), int64(1), object(8)\n",
+      "memory usage: 62.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 367 entries, 0 to 366\n",
+      "Data columns (total 12 columns):\n",
+      "Loan_ID              367 non-null object\n",
+      "Gender               356 non-null object\n",
+      "Married              367 non-null object\n",
+      "Dependents           357 non-null object\n",
+      "Education            367 non-null object\n",
+      "Self_Employed        344 non-null object\n",
+      "ApplicantIncome      367 non-null int64\n",
+      "CoapplicantIncome    367 non-null int64\n",
+      "LoanAmount           362 non-null float64\n",
+      "Loan_Amount_Term     361 non-null float64\n",
+      "Credit_History       338 non-null float64\n",
+      "Property_Area        367 non-null object\n",
+      "dtypes: float64(3), int64(2), object(7)\n",
+      "memory usage: 34.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Loan_ID               0\n",
+       "Gender               13\n",
+       "Married               3\n",
+       "Dependents           15\n",
+       "Education             0\n",
+       "Self_Employed        32\n",
+       "ApplicantIncome       0\n",
+       "CoapplicantIncome     0\n",
+       "LoanAmount           22\n",
+       "Loan_Amount_Term     14\n",
+       "Credit_History       50\n",
+       "Property_Area         0\n",
+       "Loan_Status           0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Loan_ID               0\n",
+       "Gender               11\n",
+       "Married               0\n",
+       "Dependents           10\n",
+       "Education             0\n",
+       "Self_Employed        23\n",
+       "ApplicantIncome       0\n",
+       "CoapplicantIncome     0\n",
+       "LoanAmount            5\n",
+       "Loan_Amount_Term      6\n",
+       "Credit_History       29\n",
+       "Property_Area         0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_data.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
