--- a/Loan_Predictor_1.ipynb
+++ b/Loan_Predictor_1.ipynb
@@ -18,7 +18,7 @@
     "import matplotlib.pyplot as plt # plotting\n",
     "import numpy as np # linear algebra\n",
     "import os \n",
-    "import pandas as pd "
+    "import pandas as pd \n"
    ]
   },
   {
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +486,7 @@
        "Name: Loan_Status, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,24 +497,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "train_data['Gender'].fillna(train_data['Gender'].mode()[0], inplace=True)\n",
+    "train_data['Married'].fillna(train_data['Married'].mode()[0], inplace=True)\n",
+    "train_data['Dependents'].fillna(train_data['Dependents'].mode()[0], inplace=True)\n",
+    "train_data['Self_Employed'].fillna(train_data['Dependents'].mode()[0], inplace=True)\n",
+    "train_data['Credit_History'].fillna(train_data['Credit_History'].mode()[0], inplace=True)\n",
+    "train_data['Loan_Amount_Term'].fillna(train_data['Loan_Amount_Term'].mode()[0], inplace=True)\n",
+    "train_data['LoanAmount'].fillna(train_data['LoanAmount'].median(), inplace=True)"
+   ]
   },
   {
    "cell_type": "code",
